<resources>
    <string name="app_name">P2P Chat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">P2P Chat</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_server">Update Server</string>
    <string name="menu_client">Update Client</string>
    <string name="menu_chat">Chat Box</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="about_description">This is a peer to peer messaging app which send and receive message using socket of server type and client type. This app can connect only two peer at a time. While connected, peers can send and receive message in real time. But both peers must be under same network.</string>
</resources>
